--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -3,10 +3,11 @@
     padding: 8px;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
     transition: background-color .2s;
-    border: 1px solid rgb(204, 204, 204);
+    border: 1px solid rgb(125, 195, 255);
+    background-color: aliceblue;
 }
 .Card:hover{
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(247, 251, 255);
 }
 p{
     width: 100%;
