--- a/src/App/App.css
+++ b/src/App/App.css
@@ -40,15 +40,17 @@
 button {
     padding: 6px 20px;
     background-color: rgb(255, 255, 255);
-    border: 2px solid rgb(145, 145, 145);
+    border: 2px solid rgb(194, 194, 194);
     transition: .2s ease-in-out;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
     margin: 4px;
+    border-radius: 50px;
+
 }
 
 
 button:hover {
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(178, 237, 255);
 }
 
 input {
