--- a/src/App/App.css
+++ b/src/App/App.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     overflow-x: auto;
     padding: 19px;
-    background-color: rgb(240, 240, 240);
+    background-color: #eee;
 
 }
 
